Diminuindo foto para dispositivo móveis

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
         </div>
       </div>
     </header>
-    <div
-      class="d-flex justify-content-center align-items-center"
-    >
+    <div class="d-flex justify-content-center align-items-center">
       <div class="container d-flex">
         <div class="roll-in-blurred-left">
           <img
@@ -37,7 +35,7 @@
             class="m-3 ms-1"
           />
         </div>
-        <div class="m-4">
+        <div>
           <div
             class="skill p-2 m-4 d-flex align-items-center justify-content-center text-primary rotate-scale-up-diag-1"
           >
