--- a/index.html
+++ b/index.html
@@ -1,73 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Higor Bueno</title>
-    <script
-      src="https://kit.fontawesome.com/ebba962dbb.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./index.css" />
-  </head>
-  <body>
-    <header class="mb-4 d-flex align-items-center">
-      <div class="container">
-        <div class="vibrate-1">
-          <i class="fas fa-solid fa-code"></i>
-          <label style="color: white">Buiding!</label>
-        </div>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Higor Bueno</title>
+  <script src="https://kit.fontawesome.com/ebba962dbb.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./index.css" />
+</head>
+
+<body>
+  <header class="mb-4 d-flex align-items-center">
+    <div class="container">
+      <div class="vibrate-1">
+        <i class="fas fa-solid fa-code"></i>
+        <label style="color: white">Buiding!</label>
       </div>
-    </header>
-    <div class="d-flex justify-content-center align-items-center">
-      <div class="container d-flex">
-        <div class="roll-in-blurred-left">
-          <img
-            src="assets/img/gatinho.jpg"
-            alt="gatinho"
-            id="profile-photo"
-            class="m-3 ms-1"
-          />
+    </div>
+  </header>
+  <div class="d-flex justify-content-center align-items-center">
+    <div class="container d-flex">
+      <div class="roll-in-blurred-left">
+        <img src="assets/img/gatinho.jpg" alt="gatinho" id="profile-photo" class="m-3 ms-1" />
+      </div>
+      <div class="">
+        <!-- <div class="skill p-2 m-4 d-flex align-items-center justify-content-center text-primary rotate-scale-up-diag-1"> -->
+          <i class="fab fa-brands fa-css3 fa-2x skill p-2 m-4 d-flex align-items-center justify-content-center text-primary rotate-scale-up-diag-1"></i>
+        <!-- </div> -->
+        <div class="skill p-2 m-4 d-flex align-items-center justify-content-center text-danger rotate-scale-up-diag-1">
+          <i class="fab fa-brands fa-html5 fa-2x"></i>
         </div>
-        <div>
-          <div
-            class="skill p-2 m-4 d-flex align-items-center justify-content-center text-primary rotate-scale-up-diag-1"
-          >
-            <i class="fab fa-brands fa-css3 fa-2x"></i>
-          </div>
-          <div
-            class="skill p-2 m-4 d-flex align-items-center justify-content-center text-danger rotate-scale-up-diag-1"
-          >
-            <i class="fab fa-brands fa-html5 fa-2x"></i>
-          </div>
-          <div
-            class="skill p-2 m-4 d-flex align-items-center justify-content-center text-node rotate-scale-up-diag-1"
-          >
-            <i class="fab fa-brands fa-node fa-2x"></i>
-          </div>
-          <div
-            class="skill p-2 m-4 d-flex align-items-center justify-content-center text-warning rotate-scale-up-diag-1"
-          >
-            <i class="fab fa-brands fa-js fa-2x"></i>
-          </div>
-          <div
-            class="skill p-2 m-4 d-flex align-items-center justify-content-center text-bootstrap rotate-scale-up-diag-1"
-          >
-            <i class="fab fa-brands fa-bootstrap fa-2x"></i>
-          </div>
+        <div class="skill p-2 m-4 d-flex align-items-center justify-content-center text-node rotate-scale-up-diag-1">
+          <i class="fab fa-brands fa-node fa-2x"></i>
+        </div>
+        <div class="skill p-2 m-4 d-flex align-items-center justify-content-center text-warning rotate-scale-up-diag-1">
+          <i class="fab fa-brands fa-js fa-2x"></i>
+        </div>
+        <div
+          class="skill p-2 m-4 d-flex align-items-center justify-content-center text-bootstrap rotate-scale-up-diag-1">
+          <i class="fab fa-brands fa-bootstrap fa-2x"></i>
+        </div>
+        <div class="skill p-2 m-4 d-flex align-items-center justify-content-center text-danger rotate-scale-up-diag-1">
+          <i class="fab fa-brands fa-angular fa-2x"></i>
+        </div>
+        <div class="skill p-2 m-4 d-flex align-items-center justify-content-center text-react rotate-scale-up-diag-1">
+          <i class="fab fa-brands fa-react fa-2x"></i>
+        </div>
+        <div class="skill p-2 m-4 d-flex align-items-center justify-content-center text-primary rotate-scale-up-diag-1">
+          <i class="fab fa-brands fa-java fa-2x"></i>
         </div>
       </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
