Tentativa de responsividade

--- a/index.html
+++ b/index.html
@@ -20,40 +20,65 @@
       </div>
     </div>
   </header>
+
   <div class="d-flex justify-content-center align-items-center">
-    <div class="container d-flex">
-      <div class="roll-in-blurred-left">
-        <img src="assets/img/gatinho.jpg" alt="gatinho" id="profile-photo" class="m-3 ms-1" />
+    <div class="container perfil">
+      <div class="roll-in-blurred-left" id="profile-div-photo">
+        <img src="assets/img/gatinho.jpg" alt="gatinho" id="profile-photo" />
       </div>
-      <div class="">
-        <!-- <div class="skill p-2 m-4 d-flex align-items-center justify-content-center text-primary rotate-scale-up-diag-1"> -->
-          <i class="fab fa-brands fa-css3 fa-2x skill p-2 m-4 d-flex align-items-center justify-content-center text-primary rotate-scale-up-diag-1"></i>
-        <!-- </div> -->
-        <div class="skill p-2 m-4 d-flex align-items-center justify-content-center text-danger rotate-scale-up-diag-1">
+      <div class="skill-list">
+        <div
+          class="skill ps-2 pe-2 pb-2 d-flex align-items-center justify-content-center text-primary rotate-scale-up-diag-1">
+          <i class="fab fa-brands fa-css3 fa-2x"></i>
+        </div>
+        <div class="skill p-2 d-flex align-items-center justify-content-center text-danger rotate-scale-up-diag-1">
           <i class="fab fa-brands fa-html5 fa-2x"></i>
         </div>
-        <div class="skill p-2 m-4 d-flex align-items-center justify-content-center text-node rotate-scale-up-diag-1">
+        <div class="skill p-2 d-flex align-items-center justify-content-center text-node rotate-scale-up-diag-1">
           <i class="fab fa-brands fa-node fa-2x"></i>
         </div>
-        <div class="skill p-2 m-4 d-flex align-items-center justify-content-center text-warning rotate-scale-up-diag-1">
+        <div class="skill p-2 d-flex align-items-center justify-content-center text-warning rotate-scale-up-diag-1">
           <i class="fab fa-brands fa-js fa-2x"></i>
         </div>
-        <div
-          class="skill p-2 m-4 d-flex align-items-center justify-content-center text-bootstrap rotate-scale-up-diag-1">
+        <div class="skill p-2 d-flex align-items-center justify-content-center text-bootstrap rotate-scale-up-diag-1">
           <i class="fab fa-brands fa-bootstrap fa-2x"></i>
         </div>
-        <div class="skill p-2 m-4 d-flex align-items-center justify-content-center text-danger rotate-scale-up-diag-1">
+        <div class="skill p-2 d-flex align-items-center justify-content-center text-danger rotate-scale-up-diag-1">
           <i class="fab fa-brands fa-angular fa-2x"></i>
         </div>
-        <div class="skill p-2 m-4 d-flex align-items-center justify-content-center text-react rotate-scale-up-diag-1">
+        <div class="skill p-2 d-flex align-items-center justify-content-center text-react rotate-scale-up-diag-1">
           <i class="fab fa-brands fa-react fa-2x"></i>
         </div>
-        <div class="skill p-2 m-4 d-flex align-items-center justify-content-center text-primary rotate-scale-up-diag-1">
+        <div class="skill p-2 d-flex align-items-center justify-content-center text-primary rotate-scale-up-diag-1">
           <i class="fab fa-brands fa-java fa-2x"></i>
         </div>
       </div>
+      <div class="info-perfil">
+        <table class="table table-hover">
+          <tr>
+            <th>Higor Bueno</th>
+          </tr>
+          <tr>
+            <td>Hortolândia</td>
+          </tr>
+          <tr>
+            <td>21 anos</td>
+          </tr>
+          <tr>
+            <td>Developer</td>
+          </tr>
+          <tr>
+            <td>UNASP</td>
+          </tr>
+          <tr>
+            <td>Lorem Ipsum</td>
+          </tr>
+
+        </table>
+      </div>
     </div>
   </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
