Adicionando butões de ir

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           Perspiciatis, delectus? -->
           </label>
         </div>
-        <div id="status" class="alert alert-success text-center mb-0" role="alert">Concluído</div>
+        <div id="status" class="alert alert-success text-center mb-0" role="alert">Concluído<button class="btn btn-success ms-3">ir</button></div>
       </div>
 
       <div class="card project" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="node-tooltip"
@@ -183,7 +183,7 @@
           Perspiciatis, delectus? -->
           </label>
         </div>
-        <div id="status" class="alert alert-warning text-center mb-0" role="alert">Em progresso</div>
+        <div id="status" class="alert alert-warning text-center mb-0" role="alert">Em progresso<button class="btn btn-dark ms-3 disabled">ir</button></div>
       </div>
 
       <div class="card project" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="danger-tooltip"
@@ -197,7 +197,7 @@
         accusamus minima molestias perferendis totam ipsam alias harum, impedit quod in sed et eos error? -->
           </label>
         </div>
-        <div id="status" class="alert alert-danger text-center mb-0" role="alert">Pendente</div>
+        <div id="status" class="alert alert-danger text-center mb-0" role="alert">Pendente<button class="btn btn-dark ms-3 disabled">ir</button></div>
       </div>
     </div>
   </section>
