Tentativa de responsividade 4 e adição de projeto react

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="skill p-2 d-flex align-items-center justify-content-center text-node rotate-scale-up-diag-1"
           data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-custom-class="node-tooltip"
-          data-bs-title="NODE.JS">
+          data-bs-title="Node.js">
           <i class="fab fa-brands fa-node fa-2x"></i>
         </div>
         <div class="skill p-2 d-flex align-items-center justify-content-center text-warning rotate-scale-up-diag-1"
@@ -104,7 +104,7 @@
                 </div>
                 <div class="skill p-2 d-flex align-items-center justify-content-center text-node rotate-scale-up-diag-1"
                   data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-custom-class="node-tooltip"
-                  data-bs-title="NODE.JS">
+                  data-bs-title="Node.js">
                   <i class="fab fa-brands fa-node fa-2x"></i>
                 </div>
                 <div
@@ -168,15 +168,15 @@
           Perspiciatis, delectus? -->
           </label>
         </div>
-        <div id="status" class="alert alert-success text-center mb-0" role="alert">Concluído<button class="btn btn-success ms-3">ir</button></div>
+        <div id="status" class="alert alert-success text-center mb-0" role="alert">Concluído <a href="/react-app"><button class="btn btn-success ms-3">ir</button></a></div>
       </div>
 
       <div class="card project" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="node-tooltip"
-        data-bs-title="Projeto em NodeJS">
+        data-bs-title="Projeto em Node.js">
         <div class="card-body p-2">
           <i class="project-logo fab fa-brands fa-node fa-2x text-node"></i>
           <label>
-            Aplicação monolita de API's desenvolvida em NodeJS utilizando NestJS.
+            Aplicação monolita de API's desenvolvida em Node.js utilizando NestJS.
             <!-- 
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet dolores repudiandae aperiam iusto nesciunt
           vero eius ea eligendi vitae harum rem exercitationem earum, molestias nobis dignissimos qui corporis.
