Adicionado projeto Angular

--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
           Perspiciatis, delectus? -->
           </label>
         </div>
-        <div id="status" class="alert alert-success text-center mb-0" role="alert">Concluído <a href="/react-app"><button class="btn btn-success ms-3">ir</button></a></div>
+        <small class="text-end me-3 mb-2">Última atualização: 19/10/2022</small>
+        <div id="status" class="alert alert-success text-center mb-0" role="alert">Concluído <a
+            href="/react-app"><button class="btn btn-success ms-3">ir</button></a></div>
       </div>
 
       <div class="card project" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="node-tooltip"
@@ -197,7 +199,8 @@
         accusamus minima molestias perferendis totam ipsam alias harum, impedit quod in sed et eos error? -->
           </label>
         </div>
-        <div id="status" class="alert alert-danger text-center mb-0" role="alert">Pendente<button class="btn btn-dark ms-3 disabled">ir</button></div>
+        <div id="status" class="alert alert-danger text-center mb-0" role="alert">Pendente<a href="/angular-app"><button
+              class="btn btn-danger ms-3">ir</button></a></button></div>
       </div>
     </div>
   </section>
