Correção skill e tag time na data

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <td>
               <div class="d-flex">
                 <div
-                  class="skill ps-2 pe-2 pb-2 d-flex align-items-center justify-content-center text-primary rotate-scale-up-diag-1"
+                  class="skill p-2 d-flex align-items-center justify-content-center text-primary rotate-scale-up-diag-1"
                   data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-custom-class="primary-tooltip"
                   data-bs-title="CSS 3">
                   <i class="fab fa-brands fa-css3 fa-2x"></i>
@@ -162,13 +162,9 @@
           <i class="project-logo fab fa-brands fa-react text-react"></i>
           <label>
             Um projeto desenvolvido em react para um trabalho universitário.
-            <!-- 
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet dolores repudiandae aperiam iusto nesciunt
-          vero eius ea eligendi vitae harum rem exercitationem earum, molestias nobis dignissimos qui corporis.
-          Perspiciatis, delectus? -->
           </label>
         </div>
-        <small class="text-end me-3 mb-2">Última atualização: 19/10/2022</small>
+        <small class="text-end me-3 mb-2">Última atualização: <time>19/10/2022</time></small>
         <div id="status" class="alert alert-success text-center mb-0" role="alert">Concluído <a
             href="/react-app"><button class="btn btn-success ms-3">ir</button></a></div>
       </div>
@@ -176,13 +172,9 @@
       <div class="card project" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="node-tooltip"
         data-bs-title="Projeto em Node.js">
         <div class="card-body p-2">
-          <i class="project-logo fab fa-brands fa-node fa-2x text-node"></i>
+          <i class="project-logo fab fa-brands fa-node text-node"></i>
           <label>
             Aplicação monolita de API's desenvolvida em Node.js utilizando NestJS.
-            <!-- 
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet dolores repudiandae aperiam iusto nesciunt
-          vero eius ea eligendi vitae harum rem exercitationem earum, molestias nobis dignissimos qui corporis.
-          Perspiciatis, delectus? -->
           </label>
         </div>
         <div id="status" class="alert alert-warning text-center mb-0" role="alert">Em progresso<button class="btn btn-dark ms-3 disabled">ir</button></div>
@@ -194,9 +186,6 @@
           <i class="project-logo  fab fa-brands fa-angular text-danger"></i>
           <label>
             Um projeto desenvolvido em Angular para treinar práticas.
-
-            <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic pariatur dicta ipsa libero incidunt. Hic
-        accusamus minima molestias perferendis totam ipsam alias harum, impedit quod in sed et eos error? -->
           </label>
         </div>
         <div id="status" class="alert alert-danger text-center mb-0" role="alert">Pendente<a href="/angular-app"><button
