Correção label e data de alteração projeto react

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="vibrate-1">
         <i class="fas fa-solid fa-code"></i>
-        <label style="color: white">Buiding!</label>
+        <label style="color: white">Building!</label>
       </div>
     </div>
   </header>
@@ -164,7 +164,7 @@
             Um projeto desenvolvido em react para um trabalho universitário.
           </label>
         </div>
-        <small class="text-end me-3 mb-2">Última atualização: <time>19/10/2022</time></small>
+        <small class="text-end me-3 mb-2">Última atualização: <time>24/10/2022</time></small>
         <div id="status" class="alert alert-success text-center mb-0" role="alert">Concluído <a
             href="/react-app"><button class="btn btn-success ms-3">ir</button></a></div>
       </div>
