Adicionado projeto nestjs

--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
             Aplicação monolita de API's desenvolvida em Node.js utilizando NestJS.
           </label>
         </div>
-        <div id="status" class="alert alert-warning text-center mb-0" role="alert">Em progresso<button class="btn btn-dark ms-3 disabled">ir</button></div>
+        <small class="text-end me-3 mb-2">Última atualização: <time>08/11/2022</time></small>
+        <div id="status" class="alert alert-warning text-center mb-0" role="alert">Em desenvolvimento<a href="https://github.com/higorbuueno/node-nestjs-app" target="_blank"><button
+          class="btn btn-warning ms-3">ir</button></a></button></div>
       </div>
 
       <div class="card project" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="danger-tooltip"
