--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="card-body p-2">
           <i class="project-logo fab fa-brands fa-node text-node"></i>
           <label>
-            Aplicação monolita de API's desenvolvida em Node.js utilizando NestJS.
+            Aplicação monolítica de API's desenvolvida em Node.js utilizando NestJS.
           </label>
         </div>
         <small class="text-end me-3 mb-2">Última atualização: <time>08/11/2022</time></small>
