--- a/index.html
+++ b/index.html
@@ -17,13 +17,23 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
 
-  <body>
+  <body onload="calculateYearsOfExperience()">
     <!-- Header -->
     <header class="mb-4 d-flex align-items-center">
-      <div class="container">
-        <div class="vibrate-1">
+      <div class="container d-flex justify-content-between">
+        <div class="vibrate-1 d-flex align-items-center">
           <i class="fas fa-solid fa-code"></i>
-          <label style="color: white">Building!</label>
+          <label class="text-white ms-2">Building!</label>
+        </div>
+        <div>
+          <a
+            href="https://www.linkedin.com/in/higor-bueno-797b401a7/"
+            target="_blank"
+            ><i class="linkedin fab fa-linkedin fa-2x me-2"></i
+          ></a>
+          <a href="https://github.com/higorbuueno" target="_blank"
+            ><i class="github fab fa-github fa-2x ms-2"></i
+          ></a>
         </div>
       </div>
     </header>
@@ -49,7 +59,7 @@
             data-bs-custom-class="primary-tooltip"
             data-bs-title="CSS"
           >
-            <i class="fab fa-brands fa-css3 fa-2x"></i>
+            <i class="fab fa-css3 fa-2x"></i>
           </div>
           <div
             class="skill p-2 d-flex align-items-center justify-content-center text-danger rotate-scale-up-diag-1"
@@ -58,7 +68,7 @@
             data-bs-custom-class="danger-tooltip"
             data-bs-title="HTML"
           >
-            <i class="fab fa-brands fa-html5 fa-2x"></i>
+            <i class="fab fa-html5 fa-2x"></i>
           </div>
           <div
             class="skill p-2 d-flex align-items-center justify-content-center text-node rotate-scale-up-diag-1"
@@ -67,7 +77,7 @@
             data-bs-custom-class="node-tooltip"
             data-bs-title="Node.js"
           >
-            <i class="fab fa-brands fa-node fa-2x"></i>
+            <i class="fab fa-node fa-2x"></i>
           </div>
           <div
             class="skill p-2 d-flex align-items-center justify-content-center text-warning rotate-scale-up-diag-1"
@@ -76,7 +86,7 @@
             data-bs-custom-class="warning-tooltip"
             data-bs-title="TypeScript and JavaScript"
           >
-            <i class="fab fa-brands fa-js fa-2x"></i>
+            <i class="fab fa-js fa-2x"></i>
           </div>
           <div
             class="skill p-2 d-flex align-items-center justify-content-center text-bootstrap rotate-scale-up-diag-1"
@@ -85,7 +95,7 @@
             data-bs-custom-class="bootstrap-tooltip"
             data-bs-title="Bootstrap"
           >
-            <i class="fab fa-brands fa-bootstrap fa-2x"></i>
+            <i class="fab fa-bootstrap fa-2x"></i>
           </div>
           <div
             class="skill p-2 d-flex align-items-center justify-content-center text-danger rotate-scale-up-diag-1"
@@ -94,7 +104,7 @@
             data-bs-custom-class="danger-tooltip"
             data-bs-title="Angular"
           >
-            <i class="fab fa-brands fa-angular fa-2x"></i>
+            <i class="fab fa-angular fa-2x"></i>
           </div>
           <div
             class="skill p-2 d-flex align-items-center justify-content-center text-react rotate-scale-up-diag-1"
@@ -103,7 +113,7 @@
             data-bs-custom-class="react-tooltip"
             data-bs-title="React"
           >
-            <i class="fab fa-brands fa-react fa-2x"></i>
+            <i class="fab fa-react fa-2x"></i>
           </div>
           <div
             class="skill p-2 d-flex align-items-center justify-content-center text-primary rotate-scale-up-diag-1"
@@ -112,7 +122,16 @@
             data-bs-custom-class="primary-tooltip"
             data-bs-title="Java"
           >
-            <i class="fab fa-brands fa-java fa-2x"></i>
+            <i class="fab fa-java fa-2x"></i>
+          </div>
+          <div
+            class="skill p-2 d-flex align-items-center justify-content-center text-primary rotate-scale-up-diag-1"
+            data-bs-toggle="tooltip"
+            data-bs-placement="bottom"
+            data-bs-custom-class="primary-tooltip"
+            data-bs-title="SQL"
+          >
+            <i class="fas fa-database fa-2x"></i>
           </div>
         </div>
         <div class="profile-info mt-lg-4">
@@ -142,7 +161,7 @@
                     data-bs-custom-class="primary-tooltip"
                     data-bs-title="CSS"
                   >
-                    <i class="fab fa-brands fa-css3 fa-2x"></i>
+                    <i class="fab fa-css3 fa-2x"></i>
                   </div>
                   <div
                     class="skill p-2 d-flex align-items-center justify-content-center text-danger rotate-scale-up-diag-1"
@@ -151,7 +170,7 @@
                     data-bs-custom-class="danger-tooltip"
                     data-bs-title="HTML"
                   >
-                    <i class="fab fa-brands fa-html5 fa-2x"></i>
+                    <i class="fab fa-html5 fa-2x"></i>
                   </div>
                   <div
                     class="skill p-2 d-flex align-items-center justify-content-center text-node rotate-scale-up-diag-1"
@@ -160,7 +179,7 @@
                     data-bs-custom-class="node-tooltip"
                     data-bs-title="Node.js"
                   >
-                    <i class="fab fa-brands fa-node fa-2x"></i>
+                    <i class="fab fa-node fa-2x"></i>
                   </div>
                   <div
                     class="skill p-2 d-flex align-items-center justify-content-center text-warning rotate-scale-up-diag-1"
@@ -169,7 +188,7 @@
                     data-bs-custom-class="warning-tooltip"
                     data-bs-title="TypeScript and JavaScript"
                   >
-                    <i class="fab fa-brands fa-js fa-2x"></i>
+                    <i class="fab fa-js fa-2x"></i>
                   </div>
                   <div
                     class="skill p-2 d-flex align-items-center justify-content-center text-bootstrap rotate-scale-up-diag-1"
@@ -178,7 +197,7 @@
                     data-bs-custom-class="bootstrap-tooltip"
                     data-bs-title="Bootstrap"
                   >
-                    <i class="fab fa-brands fa-bootstrap fa-2x"></i>
+                    <i class="fab fa-bootstrap fa-2x"></i>
                   </div>
                   <div
                     class="skill p-2 d-flex align-items-center justify-content-center text-danger rotate-scale-up-diag-1"
@@ -187,7 +206,7 @@
                     data-bs-custom-class="danger-tooltip"
                     data-bs-title="Angular"
                   >
-                    <i class="fab fa-brands fa-angular fa-2x"></i>
+                    <i class="fab fa-angular fa-2x"></i>
                   </div>
                   <div
                     class="skill p-2 d-flex align-items-center justify-content-center text-react rotate-scale-up-diag-1"
@@ -196,7 +215,7 @@
                     data-bs-custom-class="react-tooltip"
                     data-bs-title="React"
                   >
-                    <i class="fab fa-brands fa-react fa-2x"></i>
+                    <i class="fab fa-react fa-2x"></i>
                   </div>
                   <div
                     class="skill p-2 d-flex align-items-center justify-content-center text-primary rotate-scale-up-diag-1"
@@ -205,16 +224,41 @@
                     data-bs-custom-class="primary-tooltip"
                     data-bs-title="Java"
                   >
-                    <i class="fab fa-brands fa-java fa-2x"></i>
+                    <i class="fab fa-java fa-2x"></i>
+                  </div>
+                  <div
+                    class="skill p-2 d-flex align-items-center justify-content-center text-primary rotate-scale-up-diag-1"
+                    data-bs-toggle="tooltip"
+                    data-bs-placement="bottom"
+                    data-bs-custom-class="primary-tooltip"
+                    data-bs-title="SQL"
+                  >
+                    <i class="fas fa-database fa-2x"></i>
                   </div>
                 </div>
               </td>
             </tr>
           </table>
           <div id="additional-informations">
-            <h3><b>Sobre mim</b></h3>
-            <p>Just a little and dreamy boy</p>
-            <div class="d-flex align-items-center mt-sm-5">
+            <div class="about-me d-flex justify-content-between">
+              <div>
+                <h3><b>Sobre mim</b></h3>
+                <p>Just a little and dreamy boy</p>
+              </div>
+              <div class="experience-years">
+                <h3 for="experience-years-input">Experiência:</h3>
+                <div class="d-flex align-items-center justify-content-center">
+                  <input
+                    type="text"
+                    id="experience-years-input"
+                    disabled
+                    class="experience-years-input form-control text-center me-3"
+                  />
+                  <div>anos</div>
+                </div>
+              </div>
+            </div>
+            <div class="d-flex align-items-center mt-sm-4">
               <div class="progress-for text-start">Júnior</div>
               <div
                 class="progress"
@@ -249,7 +293,7 @@
           data-bs-title="Projeto em React"
         >
           <div class="card-body p-2">
-            <i class="project-logo fab fa-brands fa-react text-react"></i>
+            <i class="project-logo fab fa-react text-react"></i>
             <label>
               Um projeto desenvolvido em react para um trabalho universitário.
             </label>
@@ -277,7 +321,7 @@
           data-bs-title="Projeto em Node.js"
         >
           <div class="card-body p-2">
-            <i class="project-logo fab fa-brands fa-node text-node"></i>
+            <i class="project-logo fab fa-node text-node"></i>
             <label>
               Aplicação monolítica de API's desenvolvida em Node.js utilizando
               NestJS.
@@ -307,7 +351,7 @@
           data-bs-title="Projeto em Angular"
         >
           <div class="card-body p-2">
-            <i class="project-logo fab fa-brands fa-angular text-danger"></i>
+            <i class="project-logo fab fa-angular text-danger"></i>
             <label>
               Um projeto desenvolvido em Angular para treinar práticas.
             </label>
@@ -341,5 +385,8 @@
         (tooltipTriggerEl) => new bootstrap.Tooltip(tooltipTriggerEl)
       );
     </script>
+
+    <!-- My Scripts -->
+    <script src="index.js"></script>
   </body>
 </html>
