Adição de novo projeto

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <div class="about-me d-flex justify-content-between">
               <div>
                 <h3><b>Sobre mim</b></h3>
-                <p>Just a little and dreamy boy</p>
+                <p>Just a dreamy boy</p>
               </div>
               <div class="experience-years">
                 <h3 for="experience-years-input">Experiência:</h3>
@@ -363,6 +363,35 @@
           >
             Pendente<a href="/angular-app"
               ><button class="btn btn-danger ms-3">ir</button></a
+            >
+          </div>
+        </div>
+
+        <div
+          class="card project"
+          data-bs-toggle="tooltip"
+          data-bs-placement="top"
+          data-bs-custom-class="danger-tooltip"
+          data-bs-title="Projeto em Angular"
+        >
+          <div class="card-body p-2">
+            <i class="project-logo fab fa-angular text-danger"></i>
+            <label>
+              Desenvolvido para a Maratona da Programação em minha universidade.
+              Não dá para lutar contra equipes que utilizam códigos copiados e
+              chats IA.
+            </label>
+          </div>
+          <small class="text-end me-3 mb-2"
+            >Abandonado pela imparcialidade da banca de jurados</small
+          >
+          <div
+            id="status"
+            class="alert alert-warning text-center mb-0"
+            role="alert"
+          >
+            Abandonado<a href="/maratona-programacao"
+              ><button class="btn btn-warning ms-3">ir</button></a
             >
           </div>
         </div>
