correção de frase do último projeto

--- a/index.html
+++ b/index.html
@@ -377,13 +377,13 @@
           <div class="card-body p-2">
             <i class="project-logo fab fa-angular text-danger"></i>
             <label>
-              Desenvolvido para a Maratona da Programação em minha universidade.
-              Não dá para lutar contra equipes que utilizam códigos copiados e
-              chats IA.
+              Desenvolvido para a Maratona de Programação de minha universidade,
+              o desafio consiste em criptografar e descriptografar frases de 3
+              formas diferentes.
             </label>
           </div>
           <small class="text-end me-3 mb-2"
-            >Abandonado pela imparcialidade da banca de jurados</small
+            >Abandonado pelo desinteresse da própria banca de jurados</small
           >
           <div
             id="status"
