--- a/index.html
+++ b/index.html
@@ -259,22 +259,21 @@
               </div>
             </div>
             <div class="d-flex align-items-center mt-sm-4">
-              <div class="progress-for text-start">Júnior</div>
+              <div class="progress-for text-start">Pleno</div>
               <div
                 class="progress"
                 role="progressbar"
                 aria-label="My skill progress bar"
-                aria-valuenow="45"
+                aria-valuenow="30"
                 aria-valuemin="0"
                 aria-valuemax="100"
               >
                 <div
                   class="progress-bar progress-bar-striped progress-bar-animated"
                 >
-                  45%
                 </div>
               </div>
-              <div class="progress-to text-end">Pleno</div>
+              <div class="progress-to text-end">Sênior</div>
             </div>
           </div>
         </div>
@@ -332,13 +331,13 @@
           >
           <div
             id="status"
-            class="alert alert-warning text-center mb-0"
+            class="alert alert-danger text-center mb-0"
             role="alert"
           >
-            Em desenvolvimento<a
+            Pendente<a
               href="https://github.com/higorbuueno/node-nestjs-app"
               target="_blank"
-              ><button class="btn btn-warning ms-3">ir</button></a
+              ><button class="btn btn-danger ms-3">ir</button></a
             >
           </div>
         </div>
@@ -372,25 +371,24 @@
           data-bs-toggle="tooltip"
           data-bs-placement="top"
           data-bs-custom-class="danger-tooltip"
-          data-bs-title="Projeto em Angular"
+          data-bs-title="Projeto em Angular e NestJs"
         >
           <div class="card-body p-2">
-            <i class="project-logo fab fa-angular text-danger"></i>
+            <!-- <i class="project-logo fab fa-angular text-danger"></i> -->
+            <img  class="project-logo" width="140px" src="assets/img/angular_nest.png" alt="nest_angular">
             <label>
-              Desenvolvido para a Maratona de Programação de minha universidade,
-              o desafio consiste em criptografar e descriptografar frases de 3
-              formas diferentes.
+             Chat em tempo real desenvolvido em Angular e um backend/API com WebSocket desenvolvida em NestJs. Dockerizado.
             </label>
           </div>
           <small class="text-end me-3 mb-2"
-            >Abandonado pelo desinteresse da própria banca de jurados</small
+            >Última atualização: <time>06/11/2023</time></small
           >
           <div
             id="status"
             class="alert alert-warning text-center mb-0"
             role="alert"
           >
-            Abandonado<a href="/maratona-programacao"
+            Em desenvolvimento<a href="https://github.com/higorbuueno/chat-nestjs-angular" target="_blank"
               ><button class="btn btn-warning ms-3">ir</button></a
             >
           </div>
