--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <div class="container d-flex justify-content-between">
         <div class="vibrate-1 d-flex align-items-center">
           <i class="fas fa-solid fa-code"></i>
-          <label class="text-white ms-2">Building!</label>
+          <label class="text-white ms-2">Working!</label>
         </div>
         <div>
           <a
-            href="https://www.linkedin.com/in/higor-bueno-797b401a7/"
+            href="https://www.linkedin.com/in/higorbuueno/"
             target="_blank"
             ><i class="linkedin fab fa-linkedin fa-2x me-2"></i
           ></a>
@@ -46,7 +46,7 @@
       <div class="container profile">
         <div class="roll-in-blurred-left" id="profile-div-photo">
           <img
-            src="assets/img/profile.jpg"
+            src="assets/img/profile.jpeg"
             alt="gatinho (eu)"
             id="profile-photo"
           />
@@ -270,8 +270,7 @@
               >
                 <div
                   class="progress-bar progress-bar-striped progress-bar-animated"
-                >
-                </div>
+                ></div>
               </div>
               <div class="progress-to text-end">Sênior</div>
             </div>
@@ -375,21 +374,29 @@
         >
           <div class="card-body p-2">
             <!-- <i class="project-logo fab fa-angular text-danger"></i> -->
-            <img  class="project-logo" width="140px" src="assets/img/angular_nest.png" alt="nest_angular">
+            <img
+              class="project-logo"
+              width="140px"
+              src="assets/img/angular_nest.png"
+              alt="nest_angular"
+            />
             <label>
-             Chat em tempo real desenvolvido em Angular e um backend/API com WebSocket desenvolvida em NestJs. Dockerizado.
+              Chat em tempo real desenvolvido em Angular e um backend/API com
+              WebSocket desenvolvida em NestJs. Dockerizado.
             </label>
           </div>
-          <small class="text-end me-3 mb-2"
-            >Última atualização: <time>06/11/2023</time></small
-          >
+          <small class="text-end me-3 mb-2">
+            Última atualização: <time>29/01/2024</time>
+          </small>
           <div
             id="status"
-            class="alert alert-warning text-center mb-0"
+            class="alert alert-success text-center mb-0"
             role="alert"
           >
-            Em desenvolvimento<a href="https://github.com/higorbuueno/chat-nestjs-angular" target="_blank"
-              ><button class="btn btn-warning ms-3">ir</button></a
+            Concluído<a
+              href="https://github.com/higorbuueno/chat-nestjs-angular"
+              target="_blank"
+              ><button class="btn btn-success ms-3">ir</button></a
             >
           </div>
         </div>
