--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
           <label class="text-white ms-2">Working!</label>
         </div>
         <div>
-          <a
-            href="https://www.linkedin.com/in/higorbuueno/"
-            target="_blank"
+          <a href="https://www.linkedin.com/in/higorbuueno/" target="_blank"
             ><i class="linkedin fab fa-linkedin fa-2x me-2"></i
           ></a>
           <a href="https://github.com/higorbuueno" target="_blank"
@@ -137,13 +135,10 @@
         <div class="profile-info mt-lg-4">
           <table class="table table-hover">
             <tr>
-              <th>Higor Bueno</th>
+              <th>Higor Bueno, <span class="text-muted fw-normal">23 anos</span></th>
             </tr>
             <tr>
               <td>Hortolândia</td>
-            </tr>
-            <tr>
-              <td>23 anos</td>
             </tr>
             <tr>
               <td>Desenvolvedor Full Stack</td>
@@ -239,44 +234,19 @@
               </td>
             </tr>
           </table>
-          <div id="additional-informations">
-            <div class="about-me d-flex justify-content-between">
-              <div>
-                <h3><b>Sobre mim</b></h3>
-                <p>Just a dreamy boy</p>
-              </div>
-              <div class="experience-years">
-                <h3 for="experience-years-input">Experiência:</h3>
-                <div class="d-flex align-items-center justify-content-center">
-                  <input
-                    type="text"
-                    id="experience-years-input"
-                    disabled
-                    class="experience-years-input form-control text-center me-3"
-                  />
-                  <div>anos</div>
-                </div>
-              </div>
-            </div>
-            <div class="d-flex align-items-center mt-sm-4">
-              <div class="progress-for text-start">Pleno</div>
-              <div
-                class="progress"
-                role="progressbar"
-                aria-label="My skill progress bar"
-                aria-valuenow="30"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              >
-                <div
-                  class="progress-bar progress-bar-striped progress-bar-animated"
-                ></div>
-              </div>
-              <div class="progress-to text-end">Sênior</div>
-            </div>
+          <div>
+            <iframe
+              style="border-radius: 12px"
+              src="https://open.spotify.com/embed/track/1BncfTJAWxrsxyT9culBrj?utm_source=generator&theme=0"
+              width="100%"
+              height="152"
+              frameborder="0"
+              allowfullscreen=""
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"
+            ></iframe>
           </div>
         </div>
-        <div id="end-table-space"></div>
       </div>
     </section>
 
